# SomeSDL3Game

./: CMakeLists.txt  SDL3Tutorial.cpp  SDL3Tutorial.slnx  SDL3Tutorial.vcxproj  SDL3Tutorial.vcxproj.filters
include/: entity_player.h  except_sdl.h  game.h  game_context.h  scene_level1.h
include/asset/: asset_audio.h  asset_font.h  asset_texture.h  asset_track.h
include/constant/: constant.h  constant_asset_path.h
include/engine/: engine_input.h  engine_renderer.h  engine_text.h  engine_texture.h  entity_player.h
include/entity/: entity.h  entity_bullet.h  entity_button.h  entity_player.h  entity_text.h  entity_track.h
include/enum/: enum_audio_type.h  enum_bullet_type.h  enum_fonttype.h  enum_scenetype.h  enum_texture_type.h
include/event/: event.h  event_pause_state_change.h  event_player_lives_change.h  event_scene_change.h
include/factory/: factory_font.h  factory_text.h
include/interface/: interface_event_handlable.h
include/manager/: manager_audio.h  manager_bullet.h  manager_event.h  manager_input.h  manager_scene.h  manager_texture.h  manager_time.h
include/scene/: scene.h  scene_level1.h  scene_level_one.h  scene_main_menu.h  scene_mainmenu.h
include/type/: type_color.h  type_vector2f.h
include/util/: util_logger.h  util_math.h
src/: abstract_singleton.h  asset_texture.h  common_vector2.h  engine_input.cpp  engine_input.h  engine_renderer.cpp  engine_renderer.h  engine_text.cpp  engine_text.h  engine_texture.cpp  engine_texture.h  entity.h  entity_player.cpp  entity_player.h  entity_text.cpp  entity_text.h  game.cpp  game.h  interface_drawable.h  interface_updatable.h  main.cpp  manager_font.cpp  manager_font.h  manager_game.cpp  manager_game.h  manager_scene.cpp  manager_scene.h  manager_text.cpp  manager_text.h  scene.h  scene_level.cpp  scene_level.h  scene_level1.cpp  scene_level1.h  scene_mainmenu.cpp  scene_mainmenu.h  struct_asset.h  struct_asset_font.h  struct_asset_texture.h  struct_framecontext.h  (+4 more)
src/asset/: asset_audio.cpp  asset_font.cpp  asset_texture.cpp  asset_track.cpp
src/engine/: engine_input.cpp  engine_renderer.cpp  engine_text.cpp  engine_texture.cpp
src/entity/: entity_button.cpp  entity_player.cpp  entity_text.cpp  entity_track.cpp
src/factory/: factory_font.cpp
src/manager/: manager_audio.cpp  manager_bullet.cpp  manager_event.cpp  manager_input.cpp  manager_scene.cpp  manager_texture.cpp  manager_time.cpp
src/scene/: scene_level1.cpp  scene_level_one.cpp  scene_main_menu.cpp  scene_mainmenu.cpp
src/util/: util_logger.cpp
